<?xml version="1.0"?>
<package>
	<name>safe_arm_description</name>
	<version>1.0.0</version>
	<description>Safe Arm Description</description>

	<maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/byeongkyu/safe_arm</url>
	<author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>xacro</run_depend>	

	<export>
	</export>
</package>