<?xml version="1.0"?>
<package>
	<name>safe_arm_gazebo</name>
	<version>1.0.0</version>
	<description>Safe Arm Gazebo</description>

	<maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/byeongkyu/safe_arm</url>
	<author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>safe_arm_control</run_depend>
	<run_depend>safe_arm_description</run_depend>
	<run_depend>safe_arm_meshes</run_depend>
	<run_depend>safe_arm_moveit_config</run_depend>

	<export>
	</export>
</package>